Completed backend of Sign In, Sign Up, Sign Out and Welcome page, changed the color theme of all pages and deleted few unnecessary PHP files.

--- a/HTML/help centre.html
+++ b/HTML/help centre.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="/Website/CSS/help centre.css">
+  <link rel="stylesheet" href="/Electronix-Website/CSS/help centre.css">
   <title>Help Centre</title>
   <h1 style="color: aliceblue;">How can we help you?</h1>
 </head>
