--- a/HTML/otp.html
+++ b/HTML/otp.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Verify mobile number</title>
-    <link rel="stylesheet" href="/Website/CSS/otp.css">
+    <link rel="stylesheet" href="/Electronix-Website/CSS/otp.css">
   
 </head>
 
