--- a/HTML/FAQ.html
+++ b/HTML/FAQ.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FAQ</title>
-    <link rel="stylesheet" href="/Website/CSS/FAQ.css" />
+    <link rel="stylesheet" href="/Electronix-Website/CSS/FAQ.css" />
   </head>
 
   <body>
