--- a/HTML/payment.html
+++ b/HTML/payment.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Payment</title>
-    <link rel="stylesheet" href="/Website/CSS/payment.css">
+    <link rel="stylesheet" href="/Electronix-Website/CSS/payment.css">
 </head>
 <body>
     <h1 style="color: white;">Payment Policy</h1>
