--- a/HTML/settings.html
+++ b/HTML/settings.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Account settings</title>
-  <link rel="stylesheet" href="/Website/CSS/settings.css">
+  <link rel="stylesheet" href="/Electronix-Website/CSS/settings.css">
 
   <style>
     
