Edited links of stylesheets

--- a/HTML/mobile.html
+++ b/HTML/mobile.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="product_style.css">
+  <link rel="stylesheet" href="/Electronic-Website/CSS/product_style.css">
 </head>
 
 <body>
@@ -33,7 +33,7 @@
   <div class="container_brand">
     <div class="box">
       <a href="#apple_heading">
-        <img src="images/brand-logo/apple.png" alt="" width="150" height="120">
+        <img src="/Electronix-Website/Images/brand-logo/apple.png" alt="" width="150" height="120">
       </a>
     </div>
     <div class="box">
