--- a/HTML/cart.html
+++ b/HTML/cart.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="\Electronix-Website/CSS/cart.css">
-	<script src="\Electronix-Website/JS/cart.js" async></script>
+    <link rel="stylesheet" href="/Electronix-Website/CSS/cart.css">
+	<script src="/Electronix-Website/JS/cart.js" async></script>
     <title>Document</title>
 </head>
 <body>
