Edited Image links of Mobile.html and Laptop.html

--- a/HTML/laptop.html
+++ b/HTML/laptop.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="/Electronix-Website/CSS/product_style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -33,22 +33,22 @@
   <div class="container_brand">
     <div class="box">
       <a href="#hp_heading">
-        <img src="images/brand-logo/hp.png" alt="" width="150" height="120">
+        <img src="/Electronix-Website/Images/brand-logo/hp.png" alt="" width="150" height="120">
       </a>
     </div>
     <div class="box">
       <a href="#acer_heading">
-        <img src="images/brand-logo/acer.png" alt="" width="150" height="120">
+        <img src="/Electronix-Website/Images/brand-logo/acer.png" alt="" width="150" height="120">
       </a>
     </div>
     <div class="box">
       <a href="#apple_heading">
-        <img src="images/brand-logo/apple.png" alt="" width="160" height="120">
+        <img src="/Electronix-Website/Images/brand-logo/apple.png" alt="" width="160" height="120">
       </a>
     </div>
     <div class="box">
       <a href="#dell_heading">
-        <img src="images/brand-logo/dell.png" alt="" width="160" height="120">
+        <img src="/Electronix-Website/Images/brand-logo/dell.png" alt="" width="160" height="120">
       </a>
     </div>
   </div>
@@ -58,7 +58,7 @@
   </div>
   <div class="container_products">
     <div class="card">
-      <img src="images/laptop/HP-Pavilion.jpeg" alt="HP-Pavilion" width="100%" height="255px">
+      <img src="/Electronix-Website/Images/laptop/HP-Pavilion.jpeg" alt="HP-Pavilion" width="100%" height="255px">
       <h1>HP Pavilion</h1>
       <h3>Core i5 11th Gen<br>(16 GB/512 GB SSD/Windows 10 Home/Natural Silver)</h3>
       <p class="price"><b>₹66,990</b></p>
@@ -66,7 +66,7 @@
       <p><button>Add to Cart</button></p>
     </div>
     <div class="card">
-      <img src="images/laptop/HP-15s.jpeg" alt="HP-15s" width="100%" height="255px">
+      <img src="/Electronix-Website/Images/laptop/HP-15s.jpeg" alt="HP-15s" width="100%" height="255px">
       <h1>HP 15s</h1>
       <h3>Core i3 11th Gen<br>(8 GB/512 GB SSD/Windows 10 Home/Jet Black)</h3>
       <p class="price"><b>₹46,990</b></p>
@@ -74,7 +74,7 @@
       <p><button>Add to Cart</button></p>
     </div>
     <div class="card">
-      <img src="images/laptop/HP-14s.jpeg" alt="HP-14s" width="100%" height="255px">
+      <img src="/Electronix-Website/Images/laptop/HP-14s.jpeg" alt="HP-14s" width="100%" height="255px">
       <h1>HP 14s</h1>
       <h3>Core i3 11th Gen<br>(8 GB/256 GB SSD/Windows 10 Home/Natural Silver)</h3>
       <p class="price"><b>₹40,000</b></p>
@@ -88,7 +88,7 @@
   </div>
   <div class="container_products">
     <div class="card">
-      <img src="images/laptop/acer-NITRO.jpeg" alt="acer-NITRO" width="100%" height="264px">
+      <img src="/Electronix-Website/Images/laptop/acer-NITRO.jpeg" alt="acer-NITRO" width="100%" height="264px">
       <h2>acer NITRO 5 Ryzen</h2>
       <h3>9 Octa Core<br>(16 GB/1 TB HDD/256 GB SSD/Windows 10 Home/Black)</h3>
       <p class="price"><b> ₹1,29,990</b></p>
@@ -96,7 +96,7 @@
       <p><button>Add to Cart</button></p>
     </div>
     <div class="card">
-      <img src="images/laptop/acer-ConceptD.jpeg" alt="acer-ConceptD" width="100%" height="255px">
+      <img src="/Electronix-Website/Images/laptop/acer-ConceptD.jpeg" alt="acer-ConceptD" width="100%" height="255px">
       <h1>acer ConceptD</h1>
       <h3>5 Core i5 8th Gen<br>(8 GB/512 GB SSD/Windows 10 Home/4 GB Graphics/White)</h3>
       <p class="price"><b>₹99,500</b></p>
@@ -104,7 +104,7 @@
       <p><button>Add to Cart</button></p>
     </div>
     <div class="card">
-      <img src="images/laptop/acer-Aspire-7.jpeg" alt="acer-Aspire" width="100%" height="255px">
+      <img src="/Electronix-Website/Images/laptop/acer-Aspire-7.jpeg" alt="acer-Aspire" width="100%" height="255px">
       <h1>acer Aspire</h1>
       <h3>7 Core i5 10th Gen<br>(8 GB/512 GB SSD/Windows 10 Home/4 GB Graphics/Black)</h3>
       <p class="price"><b>₹56,990</b></p>
@@ -118,7 +118,7 @@
   </div>
   <div class="container_products">
     <div class="card">
-      <img src="images/laptop/APPLE-MacBook-Pro.jpeg" alt="APPLE-MacBook-Pro" width="100%" height="255px">
+      <img src="/Electronix-Website/Images/laptop/APPLE-MacBook-Pro.jpeg" alt="APPLE-MacBook-Pro" width="100%" height="255px">
       <h1>APPLE MacBook Pro</h1>
       <h3>Core i7 9th Gen<br>(16 GB/512 GB SSD/Mac OS Catalina/4 GB Graphics/Silver)</h3>
       <p class="price"><b>₹1,79,990</b></p>
@@ -126,7 +126,7 @@
       <p><button>Add to Cart</button></p>
     </div>
     <div class="card">
-      <img src="images/laptop/APPLE-MacBook-Pro-M1.jpeg" alt="APPLE-MacBook-Pro-M1" width="100%" height="255px">
+      <img src="/Electronix-Website/Images/laptop/APPLE-MacBook-Pro-M1.jpeg" alt="APPLE-MacBook-Pro-M1" width="100%" height="255px">
       <h1>APPLE MacBook Pro M1</h1>
       <h3>Core i3 11th Gen<br>(8 GB/256 GB SSD/Windows 10 Home/Natural Silver)</h3>
       <p class="price"><b>₹1,12,990</b></p>
@@ -134,7 +134,7 @@
       <p><button>Add to Cart</button></p>
     </div>
     <div class="card">
-      <img src="images/laptop/APPLE-MacBook-Air-M1.jpeg" alt="APPLE-MacBook-Air-M1" width="100%" height="255px">
+      <img src="/Electronix-Website/Images/laptop/APPLE-MacBook-Air-M1.jpeg" alt="APPLE-MacBook-Air-M1" width="100%" height="255px">
       <h1>APPLE MacBook Air M1</h1>
       <h3> 8‑core CPU and 7‑core GPU<br>(8 GB/256 GB SSD/Mac OS Big Sur/Space Grey)</h3>
       <p class="price"><b>₹88,990</b></p>
@@ -148,7 +148,7 @@
   </div>
   <div class="container_products">
     <div class="card">
-      <img src="images/laptop/DELL-G15.jpeg" alt="DELL-G15" width="100%" height="255px">
+      <img src="/Electronix-Website/Images/laptop/DELL-G15.jpeg" alt="DELL-G15" width="100%" height="255px">
       <h1>DELL G15</h1>
       <h3>Core i5 10th Gen<br>(8 GB/512 GB SSD/Windows 10/4 GB Graphics/Dark Shadow Grey)</h3>
       <p class="price"><b>₹69,690</b></p>
@@ -156,7 +156,7 @@
       <p><button>Add to Cart</button></p>
     </div>
     <div class="card">
-      <img src="images/laptop/DELL-Inspiron.jpeg" alt="DELL-Inspiron" width="100%" height="255px">
+      <img src="/Electronix-Website/Images/laptop/DELL-Inspiron.jpeg" alt="DELL-Inspiron" width="100%" height="255px">
       <h1>DELL Inspiron</h1>
       <h3>Core i5 11th Gen<br>(4 GB/1 TB HDD/256 GB SSD/Windows 10 Home/Softmint)</h3>
       <p class="price"><b>₹54,990</b></p>
@@ -164,7 +164,7 @@
       <p><button>Add to Cart</button></p>
     </div>
     <div class="card">
-      <img src="images/laptop/DELL-Inspiron-Ryzen.jpeg" alt="DELL-Inspiron-Ryzen" width="100%" height="265px">
+      <img src="/Electronix-Website/Images/laptop/DELL-Inspiron-Ryzen.jpeg" alt="DELL-Inspiron-Ryzen" width="100%" height="265px">
       <h2>DELL Inspiron Ryzen</h2>
       <h3>3 Dual Core<br>(8 GB/1 TB HDD/Windows 10/Softmint)</h3>
       <p class="price"><b>₹39,990</b></p>
