--- a/HTML/mobile.html
+++ b/HTML/mobile.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="/Electronic-Website/CSS/product_style.css">
+  <link rel="stylesheet" href="/Electronix-Website/CSS/product_style.css">
 </head>
 
 <body>
@@ -38,27 +38,27 @@
     </div>
     <div class="box">
       <a href="#samsung_heading">
-        <img src="images/brand-logo/samsung.png" alt="" width="150" height="110">
+        <img src="/Electronix-Website/Images/brand-logo/samsung.png" alt="" width="150" height="110">
       </a>
     </div>
     <div class="box">
       <a href="#mi_heading">
-        <img src="images/brand-logo/mi.png" alt="" width="160" height="110">
+        <img src="/Electronix-Website/Images/brand-logo/mi.png" alt="" width="160" height="110">
       </a>
     </div>
     <div class="box">
       <a href="#oppo_heading">
-        <img src="images/brand-logo/oppo.png" alt="" width="150" height="120">
+        <img src="/Electronix-Website/Images/brand-logo/oppo.png" alt="" width="150" height="120">
       </a>
     </div>
     <div class="box">
       <a href="#realme_heading">
-        <img src="images/brand-logo/realme.png" alt="" width="150" height="120">
+        <img src="/Electronix-Website/Images/brand-logo/realme.png" alt="" width="150" height="120">
       </a>
     </div>
     <div class="box">
       <a href="#oneplus_heading">
-        <img src="images/brand-logo/oneplus.png" alt="" width="150" height="120">
+        <img src="/Electronix-Website/Images/brand-logo/oneplus.png" alt="" width="150" height="120">
       </a>
     </div>
   </div>
@@ -68,7 +68,7 @@
   </div>
   <div class="container_products">
     <div class="card">
-      <img src="images/mobile/iPhone12promax.jpeg" alt="iPhone 12" width="100%" height="455px">
+      <img src="/Electronix-Website/Images/mobile/iPhone12promax.jpeg" alt="iPhone 12" width="100%" height="455px">
       <h2>APPLE iPhone <br> 12 PRO MAX</h2>
       <p><b>(Pacific Blue, 6 GB RAM, 128 GB)</b></p>
       <p class="price"><b>₹1,25,900</b></p>
@@ -76,7 +76,7 @@
       <p><button>Add to Cart</button></p>
     </div>
     <div class="card">
-      <img src="images/mobile/iPhone11.jpeg" alt="iPhone 11" width="100%" height="470px">
+      <img src="/Electronix-Website/Images/mobile/iPhone11.jpeg" alt="iPhone 11" width="100%" height="470px">
       <h1>APPLE iPhone 11</h1>
       <p><b>(White, 4 GB RAM, 64 GB)</b></p>
       <p class="price"><b>₹51,999</b></p>
@@ -84,7 +84,7 @@
       <p><button>Add to Cart</button></p>
     </div>
     <div class="card">
-      <img src="images/mobile/iPhoneSE.jpeg" alt="iPhone SE" width="100%" height="470px">
+      <img src="/Electronix-Website/Images/mobile/iPhoneSE.jpeg" alt="iPhone SE" width="100%" height="470px">
       <h1>APPLE iPhone SE</h1>
       <p><b>(Black, 3 GB RAM, 128 GB)</b></p>
       <p class="price"><b>₹34,999</b></p>
@@ -98,7 +98,7 @@
   </div>
   <div class="container_products">
     <div class="card">
-      <img src="images/mobile/SM-A31.jpeg" alt="iPhone 12" width="100%" height="450px">
+      <img src="/Electronix-Website/Images/mobile/SM-A31.jpeg" alt="iPhone 12" width="100%" height="450px">
       <h1>SAMSUNG Galaxy A31</h1>
       <p><b>(Prism Crush Blue, 6 GB RAM, 128 GB)</b></p>
       <p class="price"><b>₹16,999</b></p>
@@ -106,7 +106,7 @@
       <p><button>Add to Cart</button></p>
     </div>
     <div class="card">
-      <img src="images/mobile/SM-F22.jpeg" alt="iPhone SE" width="100%" height="450px">
+      <img src="/Electronix-Website/Images/mobile/SM-F22.jpeg" alt="iPhone SE" width="100%" height="450px">
       <h1>SAMSUNG Galaxy F22</h1>
       <p><b>(Denim Blue, 4 GB RAM, 64 GB)</b></p>
       <p class="price"><b>₹12,999</b></p>
@@ -114,7 +114,7 @@
       <p><button>Add to Cart</button></p>
     </div>
     <div class="card">
-      <img src="images/mobile/SM-F02.jpeg" alt="iPhone 11" width="100%" height="450px">
+      <img src="/Electronix-Website/Images/mobile/SM-F02.jpeg" alt="iPhone 11" width="100%" height="450px">
       <h1>SAMSUNG Galaxy F02s</h1>
       <p><b>(Diamond Blue, 4 GB RAM, 64 GB)</b></p>
       <p class="price"><b>₹10,499</b></p>
@@ -128,7 +128,7 @@
   </div>
   <div class="container_products">
     <div class="card">
-      <img src="images/mobile/MI-redmi-note10promax.jpeg" alt="MI-redmi-note10promax" width="100%" height="450px">
+      <img src="/Electronix-Website/Images/mobile/MI-redmi-note10promax.jpeg" alt="MI-redmi-note10promax" width="100%" height="450px">
       <h3>REDMI Note 10 <br> Pro Max</h3>
       <p><b>(Dark Night, 6 GB RAM, 128 GB)</b></p>
       <p class="price"><b>₹21,147</b></p>
@@ -136,7 +136,7 @@
       <p><button>Add to Cart</button></p>
     </div>
     <div class="card">
-      <img src="images/mobile/MI-redmi-note-9.jpeg" alt="MI-redmi-note-9" width="100%" height="450px">
+      <img src="/Electronix-Website/Images/mobile/MI-redmi-note-9.jpeg" alt="MI-redmi-note-9" width="100%" height="450px">
       <h1>REDMI Note 9</h1>
       <p><b>(Shadow Black, 4 GB RAM, 64 GB)</b></p>
       <p class="price"><b>₹11,999</b></p>
@@ -144,7 +144,7 @@
       <p><button>Add to Cart</button></p>
     </div>
     <div class="card">
-      <img src="images/mobile/MI-redmi-9.jpeg" alt="MI-redmi-9" width="100%" height="450px">
+      <img src="/Electronix-Website/Images/mobile/MI-redmi-9.jpeg" alt="MI-redmi-9" width="100%" height="450px">
       <h1>Redmi 9</h1>
       <p><b>(Sporty Orange, 4 GB RAM, 64 GB)</b></p>
       <p class="price"><b>₹9,821</b></p>
@@ -158,7 +158,7 @@
   </div>
   <div class="container_products">
     <div class="card">
-      <img src="images/mobile/Oppo-f19s.jpeg" alt="Oppo-f19s" width="100%" height="450px">
+      <img src="/Electronix-Website/Images/mobile/Oppo-f19s.jpeg" alt="Oppo-f19s" width="100%" height="450px">
       <h1>OPPO F19s</h1>
       <p><b>(Glowing Gold, 6 GB RAM, 128 GB)</b></p>
       <p class="price"><b>₹19,990</b></p>
@@ -166,7 +166,7 @@
       <p><button>Add to Cart</button></p>
     </div>
     <div class="card">
-      <img src="images/mobile/Oppo-a53.jpeg" alt="Oppo-a53" width="100%" height="450px">
+      <img src="/Electronix-Website/Images/mobile/Oppo-a53.jpeg" alt="Oppo-a53" width="100%" height="450px">
       <h1>OPPO A53</h1>
       <p><b>(Moonlight Black, 4 GB RAM, 64 GB)</b></p>
       <p class="price"><b>₹11,990</b></p>
@@ -174,7 +174,7 @@
       <p><button>Add to Cart</button></p>
     </div>
     <div class="card">
-      <img src="images/mobile/Oppo-a12.jpeg" alt="Oppo-a12" width="100%" height="450px">
+      <img src="/Electronix-Website/Images/mobile/Oppo-a12.jpeg" alt="Oppo-a12" width="100%" height="450px">
       <h1>OPPO A12</h1>
       <p><b>(Deep Blue, 4 GB RAM, 64 GB)</b></p>
       <p class="price"><b>₹10,490</b></p>
