--- a/HTML/mobile.html
+++ b/HTML/mobile.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="product_style.css">
+  <link rel="stylesheet" href="/CSS/product_style.css">
 </head>
 
 <body>
@@ -33,32 +33,32 @@
   <div class="container_brand">
     <div class="box">
       <a href="#apple_heading">
-        <img src="images/brand-logo/apple.png" alt="" width="150" height="120">
+        <img src="/images/brand-logo/apple.png" alt="" width="150" height="120">
       </a>
     </div>
     <div class="box">
       <a href="#samsung_heading">
-        <img src="images/brand-logo/samsung.png" alt="" width="150" height="110">
+        <img src="/images/brand-logo/samsung.png" alt="" width="150" height="110">
       </a>
     </div>
     <div class="box">
       <a href="#mi_heading">
-        <img src="images/brand-logo/mi.png" alt="" width="160" height="110">
+        <img src="/images/brand-logo/mi.png" alt="" width="160" height="110">
       </a>
     </div>
     <div class="box">
       <a href="#oppo_heading">
-        <img src="images/brand-logo/oppo.png" alt="" width="150" height="120">
+        <img src="/images/brand-logo/oppo.png" alt="" width="150" height="120">
       </a>
     </div>
     <div class="box">
       <a href="#realme_heading">
-        <img src="images/brand-logo/realme.png" alt="" width="150" height="120">
+        <img src="/images/brand-logo/realme.png" alt="" width="150" height="120">
       </a>
     </div>
     <div class="box">
       <a href="#oneplus_heading">
-        <img src="images/brand-logo/oneplus.png" alt="" width="150" height="120">
+        <img src="/images/brand-logo/oneplus.png" alt="" width="150" height="120">
       </a>
     </div>
   </div>
@@ -188,7 +188,7 @@
   </div>
   <div class="container_products">
     <div class="card">
-      <img src="images/mobile/realme-8i.jpeg" alt="realme-8i" width="100%" height="450px">
+      <img src="/images/mobile/realme-8i.jpeg" alt="realme-8i" width="100%" height="450px">
       <h1>realme 8i</h1>
       <p><b>(Space Purple, 6 GB RAM, 128 GB)</b></p>
       <p class="price"><b>₹14,999</b></p>
@@ -196,7 +196,7 @@
       <p><button>Add to Cart</button></p>
     </div>
     <div class="card">
-      <img src="images/mobile/realme-c25y.jpeg" alt="realme-c25y" width="100%" height="450px">
+      <img src="/images/mobile/realme-c25y.jpeg" alt="realme-c25y" width="100%" height="450px">
       <h1>realme C25Y</h1>
       <p><b>(Glacier Blue, 4 GB RAM, 128 GB)</b></p>
       <p class="price"><b>₹11,999</b></p>
@@ -204,7 +204,7 @@
       <p><button>Add to Cart</button></p>
     </div>
     <div class="card">
-      <img src="images/mobile/realme-c21.jpeg" alt="realme-c21" width="100%" height="450px">
+      <img src="/images/mobile/realme-c21.jpeg" alt="realme-c21" width="100%" height="450px">
       <h1>realme C21</h1>
       <p><b>(Cross Black, 4 GB RAM, 64 GB)</b></p>
       <p class="price"><b>₹9,999</b></p>
@@ -218,7 +218,7 @@
   </div>
   <div class="container_products">
     <div class="card">
-      <img src="images/mobile/OnePlus-9.jpg" alt="OnePlus-9" width="100%" height="450px">
+      <img src="/images/mobile/OnePlus-9.jpg" alt="OnePlus-9" width="100%" height="450px">
       <h1>OnePlus 9</h1>
       <p><b>(Arctic Sky, 8 GB RAM, 128GB)</b></p>
       <p class="price"><b>₹42,249</b></p>
@@ -226,7 +226,7 @@
       <p><button>Add to Cart</button></p>
     </div>
     <div class="card">
-      <img src="images/mobile/OnePlus-7Tpro.jpg" alt="OnePlus-7Tpro" width="100%" height="450px">
+      <img src="/images/mobile/OnePlus-7Tpro.jpg" alt="OnePlus-7Tpro" width="100%" height="450px">
       <h1>OnePlus 7T Pro</h1>
       <p><b>(Haze Blue, 8 GB RAM, 256GB)</b></p>
       <p class="price"><b>₹36,999</b></p>
@@ -234,7 +234,7 @@
       <p><button>Add to Cart</button></p>
     </div>
     <div class="card">
-      <img src="images/mobile/OnePlus-6.jpg" alt="OnePlus-6" width="100%" height="450px">
+      <img src="/images/mobile/OnePlus-6.jpg" alt="OnePlus-6" width="100%" height="450px">
       <h1>OnePlus 6</h1>
       <p><b>(Mirror Black, 6 GB RAM, 64GB)</b></p>
       <p class="price"><b>₹17,999</b></p>
