--- a/HTML/tv.html
+++ b/HTML/tv.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="product_style.css">
+  <link rel="stylesheet" href="/CSS/product_style.css">
 </head>
 
 <body>
@@ -33,22 +33,22 @@
   <div class="container_brand">
     <div class="box">
       <a href="#lg_heading">
-        <img src="images/brand-logo/lg.png" alt="" width="150" height="130">
+        <img src="/images/brand-logo/lg.png" alt="" width="150" height="130">
       </a>
     </div>
     <div class="box">
       <a href="#mi_heading">
-        <img src="images/brand-logo/mi.png" alt="" width="150" height="120">
+        <img src="/images/brand-logo/mi.png" alt="" width="150" height="120">
       </a>
     </div>
     <div class="box">
       <a href="#samsung_heading">
-        <img src="images/brand-logo/samsung.png" alt="" width="160" height="120">
+        <img src="/images/brand-logo/samsung.png" alt="" width="160" height="120">
       </a>
     </div>
     <div class="box">
       <a href="#sony_heading">
-        <img src="images/brand-logo/sony.png" alt="" width="160" height="120">
+        <img src="/images/brand-logo/sony.png" alt="" width="160" height="120">
       </a>
     </div>
   </div>
@@ -58,7 +58,7 @@
   </div>
   <div class="container_products">
     <div class="card">
-      <img src="images/tv/LG-139cm.jpeg" alt="LG-139cm" width="100%" height="255px">
+      <img src="/images/tv/LG-139cm.jpeg" alt="LG-139cm" width="100%" height="255px">
       <h1>LG LED Smart TV</h1>
       <p><b>(139 cm (55 inch) Ultra HD (4K))</b></p>
       <p class="price"><b>₹57,990</b></p>
@@ -66,7 +66,7 @@
       <p><button>Add to Cart</button></p>
     </div>
     <div class="card">
-      <img src="images/tv/LG-108cm.jpeg" alt="LG-108cm" width="100%" height="255px">
+      <img src="/images/tv/LG-108cm.jpeg" alt="LG-108cm" width="100%" height="255px">
       <h1>LG LED Smart TV</h1>
       <p><b>(108 cm (43 inch) Full HD)</b></p>
       <p class="price"><b>₹33,990 </b></p>
@@ -74,7 +74,7 @@
       <p><button>Add to Cart</button></p>
     </div>
     <div class="card">
-      <img src="images/tv/LG-80.jpeg" alt="LG-80" width="100%" height="255px">
+      <img src="/images/tv/LG-80.jpeg" alt="LG-80" width="100%" height="255px">
       <h1>LG LED Smart TV</h1>
       <p><b>(80 cm (32 inch) HD Ready)</b></p>
       <p class="price"><b>₹17,999</b></p>
@@ -88,7 +88,7 @@
   </div>
   <div class="container_products">
     <div class="card">
-      <img src="images/tv/Mi-4X.jpeg" alt="Mi-4X" width="100%" height="255px">
+      <img src="/images/tv/Mi-4X.jpeg" alt="Mi-4X" width="100%" height="255px">
       <h1>Mi 4X <br>LED Smart Android TV</h1>
       <p><b>(108 cm (43 inch) Ultra HD (4K))</b></p>
       <p class="price"><b>₹29,999</b></p>
@@ -96,7 +96,7 @@
       <p><button>Add to Cart</button></p>
     </div>
     <div class="card">
-      <img src="images/tv/Mi-4A.jpeg" alt="Mi-4A" width="100%" height="255px">
+      <img src="/images/tv/Mi-4A.jpeg" alt="Mi-4A" width="100%" height="255px">
       <h1>Mi 4A</h1>
       <h2>Horizon Edition<br>LED Smart Android TV</h2>
       <p><b>(100 cm (40 inch) Full HD LED )</b></p>
@@ -105,7 +105,7 @@
       <p><button>Add to Cart</button></p>
     </div>
     <div class="card">
-      <img src="images/tv/Mi-4APRO.jpeg" alt="Mi-4APRO" width="100%" height="255px">
+      <img src="/images/tv/Mi-4APRO.jpeg" alt="Mi-4APRO" width="100%" height="255px">
       <h1>Mi 4A PRO<br>LED Smart Android TV</h1>
       <p><b>(80 cm (32 inch) HD Ready )</b></p>
       <p class="price"><b>₹16,999</b></p>
@@ -119,7 +119,7 @@
   </div>
   <div class="container_products">
     <div class="card">
-      <img src="images/tv/SAMSUNG-Series7.jpeg" alt="SAMSUNG-Series7" width="100%" height="255px">
+      <img src="/images/tv/SAMSUNG-Series7.jpeg" alt="SAMSUNG-Series7" width="100%" height="255px">
       <h1>SAMSUNG<br>Series 7<br>LED Smart TV</h1>
       <p><b>(189 cm (75 inch) Ultra HD (4K)</b></p>
       <p class="price"><b>₹2,39,999</b></p>
@@ -127,7 +127,7 @@
       <p><button>Add to Cart</button></p>
     </div>
     <div class="card">
-      <img src="images/tv/SAMSUNG-Crystal-4K-138cm.jpeg" alt="SAMSUNG-Crystal-4K-138cm" width="100%" height="255px">
+      <img src="/images/tv/SAMSUNG-Crystal-4K-138cm.jpeg" alt="SAMSUNG-Crystal-4K-138cm" width="100%" height="255px">
       <h1>SAMSUNG<br>Crystal 4K<br>LED Smart TV</h1>
       <p><b>(138 cm (55 inch) Ultra HD (4K))</b></p>
       <p class="price"><b>₹51,990</b></p>
@@ -135,7 +135,7 @@
       <p><button>Add to Cart</button></p>
     </div>
     <div class="card">
-      <img src="images/tv/SAMSUNG-Crystal-4K-108cm.jpeg" alt="SAMSUNG-Crystal-4K-108cm" width="100%" height="255px">
+      <img src="/images/tv/SAMSUNG-Crystal-4K-108cm.jpeg" alt="SAMSUNG-Crystal-4K-108cm" width="100%" height="255px">
       <h1>SAMSUNG<br>Crystal 4K<br>LED Smart TV</h1>
       <p><b>(108 cm (43 inch) Ultra HD (4K))</b></p>
       <p class="price"><b>₹38,990</b></p>
@@ -149,7 +149,7 @@
   </div>
   <div class="container_products">
     <div class="card">
-      <img src="images/tv/SONY-BRAVIA-X7400H.jpeg" alt="SONY-BRAVIA-X7400H" width="100%" height="255px">
+      <img src="/images/tv/SONY-BRAVIA-X7400H.jpeg" alt="SONY-BRAVIA-X7400H" width="100%" height="255px">
       <h2>SONY BRAVIA X7400H<br>LED Smart Android TV</h2>
       <p><b>(138.8 cm (55 inch) Ultra HD (4K))</b></p>
       <p class="price"><b>₹69,999</b></p>
@@ -157,7 +157,7 @@
       <p><button>Add to Cart</button></p>
     </div>
     <div class="card">
-      <img src="images/tv/SONY-W800G-Series.jpeg" alt="SONY-W800G-Series" width="100%" height="255px">
+      <img src="/images/tv/SONY-W800G-Series.jpeg" alt="SONY-W800G-Series" width="100%" height="255px">
       <h2>SONY W800G Series<br>LED Smart Android TV</h2>
       <p><b>(123.2 cm (49 inch) Full HD )</b></p>
       <p class="price"><b>₹49,999</b></p>
@@ -165,7 +165,7 @@
       <p><button>Add to Cart</button></p>
     </div>
     <div class="card">
-      <img src="images/tv/SONY-BRAVIA-80cm.jpeg" alt="SONY-BRAVIA-80cm" width="100%" height="255px">
+      <img src="/images/tv/SONY-BRAVIA-80cm.jpeg" alt="SONY-BRAVIA-80cm" width="100%" height="255px">
       <h2>SONY BRAVIA<br>LED Smart TV</h2>
       <p><b>(80 cm (32 inch) HD Ready)</b></p>
       <p class="price"><b>₹28,499</b></p>
