--- a/HTML/tablet.html
+++ b/HTML/tablet.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="product_style.css">
+  <link rel="stylesheet" href="/CSS/product_style.css">
 </head>
 
 <body>
@@ -32,17 +32,17 @@
   <div class="container_brand">
     <div class="box">
       <a href="#samsung_heading">
-        <img src="images/brand-logo/samsung.png" alt="" width="150" height="120">
+        <img src="/images/brand-logo/samsung.png" alt="" width="150" height="120">
       </a>
     </div>
     <div class="box">
       <a href="#lenovo_heading">
-        <img src="images/brand-logo/lenovo.png" alt="" width="150" height="120">
+        <img src="/images/brand-logo/lenovo.png" alt="" width="150" height="120">
       </a>
     </div>
     <div class="box">
       <a href="#apple_heading">
-        <img src="images/brand-logo/apple.png" alt="" width="160" height="120">
+        <img src="/images/brand-logo/apple.png" alt="" width="160" height="120">
       </a>
     </div>
   </div>
@@ -52,7 +52,7 @@
   </div>
   <div class="container_products">
     <div class="card">
-      <img src="images/tablet/SAMSUNG-Galaxy-TabS7.jpeg" alt="SAMSUNG-Galaxy-TabS7" width="100%" height="250px">
+      <img src="/images/tablet/SAMSUNG-Galaxy-TabS7.jpeg" alt="SAMSUNG-Galaxy-TabS7" width="100%" height="250px">
       <h2>SAMSUNG Galaxy Tab<br>S7+</h2>
       <p><b>(6 GB RAM, 128 GB ROM, 12.4 inch, Mystic Black)</b></p>
       <p class="price"><b>₹71,999</b></p>
@@ -60,7 +60,7 @@
       <p><button>Add to Cart</button></p>
     </div>
     <div class="card">
-      <img src="images/tablet/SAMSUNG-Galaxy-TabS6.jpeg" alt="SAMSUNG-Galaxy-TabS6" width="100%" height="250px">
+      <img src="/images/tablet/SAMSUNG-Galaxy-TabS6.jpeg" alt="SAMSUNG-Galaxy-TabS6" width="100%" height="250px">
       <h2>SAMSUNG Galaxy Tab<br>S6 Lite</h2>
       <p><b>(4 GB RAM, 64 GB ROM, 10.4 inch, Angora Blue)</b></p>
       <p class="price"><b>₹27,999</b></p>
@@ -68,7 +68,7 @@
       <p><button>Add to Cart</button></p>
     </div>
     <div class="card">
-      <img src="images/tablet/SAMSUNG-Galaxy-TabA7.jpeg" alt="SAMSUNG-Galaxy-TabA7" width="100%" height="250px">
+      <img src="/images/tablet/SAMSUNG-Galaxy-TabA7.jpeg" alt="SAMSUNG-Galaxy-TabA7" width="100%" height="250px">
       <h2>SAMSUNG Galaxy Tab<br>A7</h2>
       <p><b>(3 GB RAM, 64 GB ROM, 10.4 inch, Dark Grey)</b></p>
       <p class="price"><b>₹18,999</b></p>
@@ -82,7 +82,7 @@
   </div>
   <div class="container_products">
     <div class="card">
-      <img src="images/tablet/Lenovo-Tab-P11-Pro.jpeg" alt="Lenovo-Tab-P11-Pro" width="100%" height="255px">
+      <img src="/images/tablet/Lenovo-Tab-P11-Pro.jpeg" alt="Lenovo-Tab-P11-Pro" width="100%" height="255px">
       <h2>Lenovo Tab<br>P11 Pro</h2>
       <p><b>(6 GB RAM, 128 GB ROM, 11.5 inch, Slate Grey)</b></p>
       <p class="price"><b>₹44,990</b></p>
@@ -90,7 +90,7 @@
       <p><button>Add to Cart</button></p>
     </div>
     <div class="card">
-      <img src="images/tablet/Lenovo-M10-FHD-Plus.jpeg" alt="Lenovo-M10-FHD-Plus" width="100%" height="255px">
+      <img src="/images/tablet/Lenovo-M10-FHD-Plus.jpeg" alt="Lenovo-M10-FHD-Plus" width="100%" height="255px">
       <h2>Lenovo Tab M10 FHD Plus<br>with Active Pen</h2>
       <p><b>(4 GB RAM, 128 GB ROM, 10.3 inches, Platinum Grey)</b></p>
       <p class="price"><b>₹23,358</b></p>
@@ -98,7 +98,7 @@
       <p><button>Add to Cart</button></p>
     </div>
     <div class="card">
-      <img src="images/tablet/Lenovo-Tab-M10.jpeg" alt="Lenovo-Tab-M10" width="100%" height="255px">
+      <img src="/images/tablet/Lenovo-Tab-M10.jpeg" alt="Lenovo-Tab-M10" width="100%" height="255px">
       <h2>Lenovo Tab<br>M10 (HD)</h2>
       <p><b>(2 GB RAM, 32 GB ROM, 10.1 inch, Slate Black)</b></p>
       <p class="price"><b>₹10,493</b></p>
@@ -112,7 +112,7 @@
   </div>
   <div class="container_products">
     <div class="card">
-      <img src="images/tablet/APPLE-iPad-Pro.jpeg" alt="APPLE-iPad-Pro" width="100%" height="455px">
+      <img src="/images/tablet/APPLE-iPad-Pro.jpeg" alt="APPLE-iPad-Pro" width="100%" height="455px">
       <h2>APPLE iPad Pro<br>2021 (5th Generation)</h2>
       <p><b>(Silver, 8 GB RAM, 128 GB ROM, 12.9 inches)</b></p>
       <p class="price"><b>₹99,900</b></p>
@@ -120,7 +120,7 @@
       <p><button>Add to Cart</button></p>
     </div>
     <div class="card">
-      <img src="images/tablet/APPLE-iPad-Air.jpeg" alt="APPLE-iPad-Air" width="100%" height="470px">
+      <img src="/images/tablet/APPLE-iPad-Air.jpeg" alt="APPLE-iPad-Air" width="100%" height="470px">
       <h2>APPLE iPad Air<br>(4th Generation)</h2>
       <p><b>(Sky Blue, 64 GB ROM, 10.9 inch)</b></p>
       <p class="price"><b>₹50,900</b></p>
@@ -128,7 +128,7 @@
       <p><button>Add to Cart</button></p>
     </div>
     <div class="card">
-      <img src="images/tablet/APPLE-ipad-Mini.jpeg" alt="APPLE-iPad-Mini" width="100%" height="470px">
+      <img src="/images/tablet/APPLE-ipad-Mini.jpeg" alt="APPLE-iPad-Mini" width="100%" height="470px">
       <h2>APPLE iPad Mini<br>(2019)</h2>
       <p><b>(Silver, 64 GB ROM, 7.9 inch)</b></p>
       <p class="price"><b>₹34,893</b></p>
